--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,80 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Dependency directories
+node_modules/
+.pnp/
+.pnp.js
+
+# Testing
+coverage/
+.nyc_output/
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Editor-specific
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Build files
+dist/
+build/
+out/
+*.o
+*.obj
+*.so
+*.dll
+*.exe
+*.dylib
+
+# Temporary files
+tmp/
+temp/
+*.pid
+*.seed
+*.pid.lock
+
+# Logs and debugging
+*.log
+*.trace
+*.profile
+
+# Optional npm cache
+.npm/
+
+# Yarn Integrity and Lock files
+.yarn-integrity
+.yarnrc.yml
+
+# macOS files
+*.DS_Store
+
+# Windows system files
+Thumbs.db
+desktop.ini
+
+# Git folder config
+.git/
+.gitignore
+
